tests/compile-errors/src/type-mismatch.stderr
error: proc macro panicked
  --> src/type-mismatch.rs:15:1
   |
15 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/type-mismatch.d");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: Could not read D source file "../../../tests/compile-errors/providers/type-mismatch.d" in "$WORKSPACE/target/tests/trybuild/compile-errors"

error[E0433]: failed to resolve: use of undeclared crate or module `mismatch`
  --> src/type-mismatch.rs:19:5
   |
19 |     mismatch::bad!(|| (bad));
   |     ^^^^^^^^ use of undeclared crate or module `mismatch`
